--- a/06_Paper/ER-ED/ERED_Stage2/method.Rmd
+++ b/06_Paper/ER-ED/ERED_Stage2/method.Rmd
@@ -123,105 +123,105 @@ If a participant always chose the strategy with the fixed 2 € reward, the othe
 The sixth adjustment of 0.02 € was done during data analysis, based on the participants' decision in the last display of the pairing.
 Participants were instructed to decide as realistically as possible by imagining that the monetary reward was actually available for choice.
 
-*Part three: ER choice.* <br> After the discounting part, participants will choose which one of the three ER strategies (distraction, distancing or suppression) they want to re-apply.
-Importantly, there will be no further instruction on what basis they should make their decision.
+*Part three: ER choice.* <br> After the discounting part, participants chose which one of the three ER strategies (distraction, distancing or suppression) they wanted to re-apply.
+Importantly, there was no further instruction on what basis they should make their decision.
 Participants should make their decision freely, according to criteria they consider important for themselves.
-However, participants will be asked to state the reasons for the decision afterwards in RedCap using a free text field.
-As soon as they have decided, they will see the respective instruction and the block with another 20 negative pictures starts.
+However, participants were asked to state the reasons for the decision afterwards in RedCap using a free text field.
+As soon as they have decided, they saw the respective instruction and the block with another 20 negative pictures started.
 
 ```{r DesignERED, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Block design of the paradigm. Every participant starts with two \"active viewing\" blocks continaing neutral (Block 1) and negative (Block 2) pictures. Order of the regulation blocks (Blocks 3, 4, and 5) is randomized between participants. After, the discounting procedure takes place. All three regulation strategies are pairwise compared. Before the last block, participants can decide which regulation strategy they want to reapply. Subjective arousal and effort ratings are assessed after each block using a slider on screen with a continuous scale."}
-include_graphics(here("06_Paper", "ER-ED", "figures", "Design_ER-ED.png"))
+include_graphics(here("06_Paper", "ER-ED", "ERED_Stage2", "figures", "Design_ER-ED.png"))
 ```
 
 ### 2.3.3 Stimuli
 
-Pictures that will be used in the paradigm are selected from the Emotional Picture Set (EmoPicS) [@Wessa2010] and the International Affective Picture System (IAPS)[@Lang2008].
+Pictures that were used in the paradigm were selected from the Emotional Picture Set (EmoPicS) [@Wessa2010] and the International Affective Picture System (IAPS)[@Lang2008].
 The 20 neutral pictures (Valence (V): *M* $\pm$ *SD* = `r round(mean(stim_neutral$valence), digits = 2)` $\pm$ `r round(sd(stim_neutral$valence), digits = 2)`; Arousal (A): *M* $\pm$ *SD* = `r round(mean(stim_neutral$arousal), digits = 2)` $\pm$ `r round(sd(stim_neutral$arousal), digits = 2)`) depicted content related to the categories persons, objects, and scenes.
-Further, 100 negative pictures, featuring categories animals, body, disaster, disgust, injury, suffering, violence, and weapons, will be used.
-An evolutionary algorithm [@Yu2010] is used to cluster these pictures into five sets with comparable valence and arousal values (set one: V: *M* $\pm$ *SD* = `r round(mean(stim_negative$valence[stim_negative$set == 1]), digits = 2)` $\pm$ `r round(sd(stim_negative$valence[stim_negative$set == 1]), digits = 2)`, A: *M* $\pm$ *SD* = `r round(mean(stim_negative$arousal[stim_negative$set == 1]), digits = 2)` $\pm$ `r round(sd(stim_negative$arousal[stim_negative$set == 1]), digits = 2)`; set two: V: *M* $\pm$ *SD* = `r round(mean(stim_negative$valence[stim_negative$set == 2]), digits = 2)` $\pm$ `r round(sd(stim_negative$valence[stim_negative$set == 2]), digits = 2)`, A: *M* $\pm$ *SD* = `r round(mean(stim_negative$arousal[stim_negative$set == 2]), digits = 2)` $\pm$ `r round(sd(stim_negative$arousal[stim_negative$set == 2]), digits = 2)`; set three: V: *M* $\pm$ *SD* = `r round(mean(stim_negative$valence[stim_negative$set == 3]), digits = 2)` $\pm$ `r round(sd(stim_negative$valence[stim_negative$set == 3]), digits = 2)`, A: *M* $\pm$ *SD* = `r round(mean(stim_negative$arousal[stim_negative$set == 3]), digits = 2)` $\pm$ `r round(sd(stim_negative$arousal[stim_negative$set == 3]), digits = 2)`; set four: V: *M* $\pm$ *SD* = `r round(mean(stim_negative$valence[stim_negative$set == 4]), digits = 2)` $\pm$ `r round(sd(stim_negative$valence[stim_negative$set == 4]), digits = 2)`, A: *M* $\pm$ *SD* = `r round(mean(stim_negative$arousal[stim_negative$set == 4]), digits = 2)` $\pm$ `r round(sd(stim_negative$arousal[stim_negative$set == 4]), digits = 2)`; set five: V: *M* $\pm$ *SD* = `r round(mean(stim_negative$valence[stim_negative$set == 5]), digits = 2)` $\pm$ `r round(sd(stim_negative$valence[stim_negative$set == 5]), digits = 2)`, A: *M* $\pm$ *SD* = `r round(mean(stim_negative$arousal[stim_negative$set == 5]), digits = 2)` $\pm$ `r round(sd(stim_negative$arousal[stim_negative$set == 5]), digits = 2)`).
+Further, 100 negative pictures, featuring categories animals, body, disaster, disgust, injury, suffering, violence, and weapons, were used.
+An evolutionary algorithm [@Yu2010] was used to cluster these pictures into five sets with comparable valence and arousal values (set one: V: *M* $\pm$ *SD* = `r round(mean(stim_negative$valence[stim_negative$set == 1]), digits = 2)` $\pm$ `r round(sd(stim_negative$valence[stim_negative$set == 1]), digits = 2)`, A: *M* $\pm$ *SD* = `r round(mean(stim_negative$arousal[stim_negative$set == 1]), digits = 2)` $\pm$ `r round(sd(stim_negative$arousal[stim_negative$set == 1]), digits = 2)`; set two: V: *M* $\pm$ *SD* = `r round(mean(stim_negative$valence[stim_negative$set == 2]), digits = 2)` $\pm$ `r round(sd(stim_negative$valence[stim_negative$set == 2]), digits = 2)`, A: *M* $\pm$ *SD* = `r round(mean(stim_negative$arousal[stim_negative$set == 2]), digits = 2)` $\pm$ `r round(sd(stim_negative$arousal[stim_negative$set == 2]), digits = 2)`; set three: V: *M* $\pm$ *SD* = `r round(mean(stim_negative$valence[stim_negative$set == 3]), digits = 2)` $\pm$ `r round(sd(stim_negative$valence[stim_negative$set == 3]), digits = 2)`, A: *M* $\pm$ *SD* = `r round(mean(stim_negative$arousal[stim_negative$set == 3]), digits = 2)` $\pm$ `r round(sd(stim_negative$arousal[stim_negative$set == 3]), digits = 2)`; set four: V: *M* $\pm$ *SD* = `r round(mean(stim_negative$valence[stim_negative$set == 4]), digits = 2)` $\pm$ `r round(sd(stim_negative$valence[stim_negative$set == 4]), digits = 2)`, A: *M* $\pm$ *SD* = `r round(mean(stim_negative$arousal[stim_negative$set == 4]), digits = 2)` $\pm$ `r round(sd(stim_negative$arousal[stim_negative$set == 4]), digits = 2)`; set five: V: *M* $\pm$ *SD* = `r round(mean(stim_negative$valence[stim_negative$set == 5]), digits = 2)` $\pm$ `r round(sd(stim_negative$valence[stim_negative$set == 5]), digits = 2)`, A: *M* $\pm$ *SD* = `r round(mean(stim_negative$arousal[stim_negative$set == 5]), digits = 2)` $\pm$ `r round(sd(stim_negative$arousal[stim_negative$set == 5]), digits = 2)`).
 A complete list of all pictures and their classification into sets can be found in supplementary material table S1.
-The five sets of negative pictures will be assigned randomly to the blocks.
+The five sets of negative pictures were assigned randomly to the blocks.
 
 ### 2.3.4 Facial electromyography
 
-Bipolar facial electromyography (EMG) will be measured for *corrugator supercilii* and *levator labii* as indices of affective valence[@Bradley2000], similar to previous work by our group[@Gaertner2021].
-Two passive surface Ag/AgCl electrodes (8 mm inner diameter, 10 mm distance between electrodes) will be placed over each left muscle according to the guidelines of @Fridlund1986.
-The ground electrode will be placed over the left *Mastoid*.
-Before electrode placement, the skin will be abraded with Every abrasive paste, cleaned with alcohol, and filled with Lectron III electrolyte gel.
-Raw signals will be amplified by a BrainAmp amplifier (Brain Products Inc., Gilching, Germany).
-Impedance level will be kept below 10 $k\Omega$. 
-Data will be sampled at 1000 Hz, filtered, rectified and integrated. 
-A 20 Hz high pass (order 8), a 300 Hz low pass (order 8), and a 50 Hz notch filter will be applied to both signals.
-Corrugator and Levator EMG will be analyzed during the 6 s of picture presentation.
-EMG data will be baseline-corrected using a time window of 2 s prior to stimulus onset [@Bradley2000]. 
-Last, the sampling rate will be changed to 100 Hz, and EMG data will be averaged for each condition and each participant.
+Bipolar facial electromyography (EMG) were measured for *corrugator supercilii* and *levator labii* as indices of affective valence[@Bradley2000], similar to previous work by our group[@Gaertner2021].
+Two passive surface Ag/AgCl electrodes (8 mm inner diameter, 10 mm distance between electrodes) were placed over each left muscle according to the guidelines of Fridlund and Cacioppo[@Fridlund1986].
+The ground electrode was placed over the left *Mastoid*.
+Before electrode placement, the skin was abraded with Every abrasive paste, cleaned with alcohol, and filled with Lectron III electrolyte gel.
+Raw signals were amplified by a BrainAmp amplifier (Brain Products Inc., Gilching, Germany).
+Impedance level were kept below 10 $k\Omega$. 
+Data were sampled at 1000 Hz, filtered, rectified and integrated. 
+A 20 Hz high pass (order 8), a 300 Hz low pass (order 8), and a 50 Hz notch filter was applied to both signals.
+*Corrugator* and *levator* EMG was analyzed during the 6 s of picture presentation.
+EMG data were baseline-corrected using a time window of 2 s prior to stimulus onset [@Bradley2000]. 
+Last, the sampling rate was changed to 100 Hz, and EMG data were averaged for each condition and each participant.
 
 ## 2.4 Sampling plan
 
-Sample size calculation is done using *G\*Power*[@Faul2007; @Faul2009].
+Sample size calculation was done using *G\*Power*[@Faul2007; @Faul2009].
 In a meta-analysis of Zaehringer and colleagues[-@Zaehringer2020], effect sizes of ER on peripheral-physiological measures were reported:
 To find an effect of $d=-0.32$ of ER on *corrugator* muscle activity with $\alpha=.05$ and $\beta=.95$, data of at least $N=85$ have to be analyzed.
 Power analyses of all other hypotheses yielded smaller sample sizes.
 However, if participants withdraw from study participation, technical failures occur, or experimenter considers the participant for not suitable for study participation (e.g., because the participant does not follow instructions or shows great fatigue), respective data will also be excluded from further analyses.
-Therefore, we aim to collect data of $N=120$ participants, about $50%$ more data sets, than necessary.
+Therefore, we aimed to collect data of $N=120$ participants, about $50%$ more data sets, than necessary.
 Detailed information on power calculation for each hypothesis can be found in the [design table](#DesignTable).
 
 ## 2.5 Analysis plan
 
-Data collection and analysis will not be performed blind to the conditions of the experiments.
-Data of whole participants will be excluded from analysis if participants withdraw their consent or they state that they did not follow experimental instructions.
-EMG data of subjects will be excluded from analysis if errors occured during recording.
-No further data exclusions are planned.
-The level of significance will be set to $\alpha=.05$.
-For hypotheses H1-4, repeated measures analysis of variance (rmANOVA) will be conducted and estimated marginal means will be computed using the *afex* package[@Singmann2021].
-Greenhouse-Geisser-corrected degrees of freedom and associated $p$-values will be reported when the assumption of sphericity is violated.
-If the within-subjects factor of interest is significant, pairwise contrasts will be calculated using Bonferroni adjustment for multiple testing.
-Proportion of explained variance $\eta_{p}^{2}$ will be reported as a measure of effect size.
+Data collection and analysis were not performed blind to the conditions of the experiments.
+Data of whole participants were excluded from analysis if participants withdraw their consent or they stated that they did not follow experimental instructions.
+EMG data of subjects were excluded from analysis if errors occured during recording.
+No further data exclusions were planned.
+The level of significance was set to $\alpha=.05$.
+For hypotheses H1-4, repeated measures analysis of variance (rmANOVA) were conducted and estimated marginal means were computed using the *afex* package[@Singmann2021].
+Greenhouse-Geisser-corrected degrees of freedom and associated $p$-values were reported when the assumption of sphericity was violated.
+If the within-subjects factor of interest was significant, pairwise contrasts were calculated using Bonferroni adjustment for multiple testing.
+Proportion of explained variance $\eta_{p}^{2}$ was reported as a measure of effect size.
 
 *Effect of valence on arousal and facial EMG.*<br> 
-To examine the impact of valence of emotional pictures on subjective arousal ratings (H1a), a rmANOVA with the factor valence (neutral and negative) for the strategy active viewing will be conducted.
-To examine the impact of valence on physiolocigal responding (H1b and H1c), a rmANOVA with the factor valence (neutral and negative) for the strategy active viewing will be conducted for EMG *corrugator* and *levator* activity.
+To examine the impact of valence of emotional pictures on subjective arousal ratings (H1a), a rmANOVA with the factor valence (neutral and negative) for the strategy active viewing was conducted.
+To examine the impact of valence on physiolocigal responding (H1b and H1c), a rmANOVA with the factor valence (neutral and negative) for the strategy active viewing was conducted for EMG *corrugator* and *levator* activity.
 
 *Effects of emotion regulation on arousal, facial EMG and effort.* <br> 
-To investigate the effects of the three ER strategies on subjective arousal (H2a), another rmANOVA  with the factor strategy (active viewing - negative, distraction, distancing, and suppression) for subjective arousal ratings will be conducted.
-To examine the effects of the three ER strategies on physiological responding (H3a and H3b), another rmANOVA with the factor strategy (active viewing - negative, distraction, distancing, and suppression) for EMG *corrugator* and *levator* activity will be conducted.
-To examine the effect of ER strategies on subjective effort (H4a), a rmANOVA with the factor strategy (active viewing - negative, distraction, distancing, and suppression) for subjective effort ratings will be conducted.
+To investigate the effects of the three ER strategies on subjective arousal (H2a), another rmANOVA  with the factor strategy (active viewing - negative, distraction, distancing, and suppression) for subjective arousal ratings was conducted.
+To examine the effects of the three ER strategies on physiological responding (H3a and H3b), another rmANOVA with the factor strategy (active viewing - negative, distraction, distancing, and suppression) for EMG *corrugator* and *levator* activity was conducted.
+To examine the effect of ER strategies on subjective effort (H4a), a rmANOVA with the factor strategy (active viewing - negative, distraction, distancing, and suppression) for subjective effort ratings was conducted.
 
-*Subjective values of emotion regulation strategies.* <br> For each ER strategy, SVs will be calculated as follows: first, the value 0.02 € will be added to or subtracted from the last monetary value of the flexible strategy, depending on the participant's last choice.
-Second, to obtain the SV of the fixed strategy (the minimum relative reward required for participants to choose the flexible over the fixed strategy), the last value of the flexible strategy will be divided by 2 €.
-Therefore, the SVs of the flexible strategies are 1, because they were chosen in the initial comparison of each pairing in which the same value was offered for both strategies, so they are the preferred strategy of each pairing.
+*Subjective values of emotion regulation strategies.* <br> For each ER strategy, SVs were calculated as follows: first, the value 0.02 € was added to or subtracted from the last monetary value of the flexible strategy, depending on the participant's last choice.
+Second, to obtain the SV of the fixed strategy (the minimum relative reward required for participants to choose the flexible over the fixed strategy), the last value of the flexible strategy was divided by 2 €.
+Therefore, the SVs of the flexible strategies were 1, because they were chosen in the initial comparison of each pairing in which the same value was offered for both strategies, so they were the preferred strategy of each pairing.
 The SVs of the fixed strategies lay between 0 and 1, with lower values indicating that the participant would need a much higher monetary incentive to choose this strategy over the other one in the pairing. 
-The final SV per strategy for each participant will be computed by averaging the SVs of each strategy across pairings.
+The final SV per strategy for each participant was computed by averaging the SVs of each strategy across pairings.
 
-To explore the association between subjective effort (H5a), subjective arousal (H5b), subjective utility (H5c), and physiological responding (H5d,e) on SVs, a multilevel model (MLM) will be specified using the $lmerTest$ package[@Kuznetsova2017].
-First, ER strategies will be recoded and centered for each subject according to their individual SVs: The strategy with the highest SV will be coded as -1, the strategy with the second highest SV 0, and the strategy with the lowest SV will be coded as 1.
-Restricted maximum likelihood (REML) will be applied to fit the model.
-A random slopes model of SVs including subjective effort (effort ratings), subjective arousal (arousal ratings), utility (utility ratings), and physiological responses (*corrugator* and *levator* activity) as level-1-predictors will be specified.
+To explore the association between subjective effort (H5a), subjective arousal (H5b), subjective utility (H5c), and physiological responding (H5d,e) on SVs, a multilevel model (MLM) was specified using the $lmerTest$ package[@Kuznetsova2017].
+First, ER strategies were recoded and centered for each subject according to their individual SVs: The strategy with the highest SV will be coded as -1, the strategy with the second highest SV 0, and the strategy with the lowest SV will be coded as 1.
+Restricted maximum likelihood (REML) was applied to fit the model.
+A random slopes model of SVs including subjective effort (effort ratings), subjective arousal (arousal ratings), utility (utility ratings), and physiological responses (*corrugator* and *levator* activity) as level-1-predictors was specified.
 $$
 \begin{split}
 SV \sim strategy\ + \text{effort rating} + \text{arousal rating} + \text{utility rating} + corrugator \text{ activity} \\\ + levator \text{ activity} + (strategy|subject)
 \end{split}
 $$ 
-Level-1-predictors will be centered within cluster[@Enders2007].
-Residuals of the final model will be inspected visually.
-Intraclass correlation coefficient (ICC), $\rho$, will be reported for each model (null model, as well as full model).
-The presented MLM follows the conceptualization of Zerna, Scheffel, et al.[@ZernaScheffel2022]
+Level-1-predictors were centered within cluster[@Enders2007].
+Residuals of the final model were inspected visually.
+Intraclass correlation coefficient (ICC), $\rho$, was reported for each model (null model, as well as full model).
+The presented MLM followed the conceptualization of Zerna, Scheffel, et al.[@ZernaScheffel2022]
 
-To investigate whether individual SVs predict ER choice (H7a), a Chi-squared test with predicted choice (highest SV of each participant) and actual choice will be computed.
-Furthermore, an ordinal logistic regression with the dependent variable choice and independent variables SVs of each strategy will be computed.
+To investigate whether individual SVs predict ER choice (H7a), a Chi-squared test with predicted choice (highest SV of each participant) and actual choice was computed.
+Furthermore, an ordinal logistic regression with the dependent variable choice and independent variables SVs of each strategy was computed.
 
-The association between flexible ER and SVs of ER strategies (H7b) will be investigated with a linear regression using the individual $intercept$ and $slope$ of each participants' SVs to predict their FlexER score.
-To this end, for each participant, SVs will be sorted by magnitude in descending order and entered as dependent variable in a linear model, with strategy (centered, i.e., -1, 0, 1) as independent variable.
+The association between flexible ER and SVs of ER strategies (H7b) was investigated with a linear regression using the individual $intercept$ and $slope$ of each participants' SVs to predict their FlexER score.
+To this end, for each participant, SVs were sorted by magnitude in descending order and entered as dependent variable in a linear model, with strategy (centered, i.e., -1, 0, 1) as independent variable.
 The resulting $intercept$ informs about the extent to which an individual considers any or all of the ER strategies as useful for regulation their emotion, while the $slope$ informs about the flexibility in the use of emotion regulation strategies. 
-The individual intercepts and slopes will then be entered as predictors in a regression model with the FlexER score as dependent variable. 
+The individual intercepts and slopes were entered as predictors in a regression model with the FlexER score as dependent variable. 
 A positive association with the predictor $intercept$ would indicate that overall higher SVs attached to ER strategies predicts higher scores on the FlexER scale. 
 A positive association with the predictor $slope$ would indicate that less negative slopes, i.e., a smaller preference for a given ER strategy, would be associated with a higher score of the FlexER scale.
 
-The influence of personality traits on SVs will be investigated exploratorily.
-Therefore, the MLM specified above will be extended by the level-2-predictors NFC and self-control.
+The influence of personality traits on SVs were investigated exploratorily.
+Therefore, the MLM specified above was extended by the level-2-predictors NFC and self-control.
 
-For each result of the analyses, both $p$-values and Bayes factors $BF10$, calculated using the *BayesFactor* package[@Morey2021], will be reported. 
-Bayes factors are calculated using the default prior widths of the functions *anovaBF*, *lmBF* and *regressionBF*.
+For each result of the analyses, both $p$-values and Bayes factors $BF10$, calculated using the *BayesFactor* package[@Morey2021], were reported. 
+Bayes factors were calculated using the default prior widths of the functions *anovaBF*, *lmBF* and *regressionBF*.
 
 ## Data availability
 
