--- a/06_Paper/ER-ED/ERED_Stage2/Manuscript_ERED_Stage2.Rmd
+++ b/06_Paper/ER-ED/ERED_Stage2/Manuscript_ERED_Stage2.Rmd
@@ -127,7 +127,7 @@ library(kableExtra) # for tables in R Markdown
 library(BayesFactor) # for bayes factors
 
 # load workspace variables from analyses_ERED.R script
-load(here("06_Paper","ER-ED","Workspace_ERED.RData"))
+load(here("06_Paper","ER-ED","ERED_Stage2","Workspace_ERED_pilot.RData"))
 
 ```
 
