--- a/06_Paper/ER-ED/ERED_Stage2/Manuscript_ERED_Stage2.Rmd
+++ b/06_Paper/ER-ED/ERED_Stage2/Manuscript_ERED_Stage2.Rmd
@@ -50,6 +50,7 @@ author:
     affiliation   : "1"
     role          :
       - Conceptualization
+      - Methodology
       - Writing - review & editing 
 affiliation       :
   - id            : "1"
